Fix head.html template reference

--- a/webapp/home/templates/home/header_landing.html
+++ b/webapp/home/templates/home/header_landing.html
@@ -9,7 +9,7 @@
 {% load static %}
 
   <head>
-    {% include 'home/snippets/meta.html' %}
+    {% include 'home/snippets/head.html' %}
     {% include 'home/snippets/imports.html' %}
 
     {% block head %}
