Landing page alternate style sheet

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -5,7 +5,10 @@
 
 
 {% block head %}
+<link rel="stylesheet" href="{% static 'home/css/index.css' %}">
+{% if landing %}
 <link rel="stylesheet" href="{% static 'home/css/landing.css' %}">
+{% endif %}
 {% endblock %}
 
 
