--- a/webapp/events/templates/events/event.html
+++ b/webapp/events/templates/events/event.html
@@ -20,6 +20,18 @@
     <div class="row">
       <div class="col">
         <h3> {{ event.title }} </h3>
+
+        {% if event.location %}
+        <table class="location">
+          <thead><th colspan=2><b>Location:</b></th></thead>
+          {% for item in event.location.fields %}
+          <tr>
+            <td> {{ item.name }} </td>
+            <td> {{ item.value }} </td>
+          </tr>
+          {% endfor %}
+        </table>
+        {% endif %}
       </div>
 
       <div class="col-sm-auto">
