--- a/webapp/events/static/events/css/events.css
+++ b/webapp/events/static/events/css/events.css
@@ -9,15 +9,24 @@ td, .table td {
 }
 table.location th {
   color: inherit;
+  font-weight: bold;
   background-color: transparent;
-}
-table.location td, table.location th {
-  font-size: .85rem;
-  padding: .15rem 2rem .15rem .25rem;
   border-bottom: 1px solid grey;
 }
-table.location td:first-child {
-  background-color: #eee;
+table.location td, table.location th {
+  text-align: right;
+  font-size: .75rem;
+  padding: 0 .15rem;
+}
+table.datetime th {
+  color: inherit;
+  font-weight: bold;
+  background-color: transparent;
+  border-bottom: 1px solid grey;
+}
+table.datetime td, table.datetime th {
+  font-size: .85rem;
+  padding: .25rem 1rem;
 }
 span.tag {
   padding: .25rem .5rem;
