--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -3,66 +3,113 @@
 <footer class="page-footer">
   <div class="container logo">
     <div class="text-center">
-      <a href="https://www.melbournebioinformatics.org.au/" target="_blank">
-        <img src="{% static 'logos/melbourne-bioinformatics.png' %}" />
+      <a href="https://www.biocommons.org.au" target="_blank">
+        <img src="{% static 'logos/footer/au-biocommons.png' %}" />
       </a>
 
-      <a href="https://ardc.edu.au/" target="_blank">
-        <img src="{% static 'logos/ardc.png' %}" />
+      <a href="https://www.qcif.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/qcif.png' %}" />
       </a>
 
-      <a href="https://bioplatforms.com/" target="_blank">
-        <img src="{% static 'logos/bpa.png' %}" />
+      <a href="https://www.melbournebioinformatics.org.au" target="_blank">
+        <img src="{% static 'logos/footer/melbbio.png' %}" />
       </a>
 
-      <a href="https://www.biocommons.org.au/" target="_blank">
-        <img src="{% static 'logos/australian-biocommons.png' %}" />
+      <a href="https://www.aarnet.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/aarnet.png' %}" />
+      </a>
+    </div>
+
+    <div class="text-center second">
+      <a href="https://www.uq.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/uq-grayscale.png' %}" />
       </a>
 
-      <a href="https://www.qcif.edu.au/" target="_blank">
-        <img src="{% static 'logos/qcif-bioinformatics.png' %}" />
+      <a href="https://ardc.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/ardc-grayscale.png' %}" />
+      </a>
+
+      <a href="https://www.unimelb.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/uni-melbourne.png' %}" />
+      </a>
+
+      <a href="https://bioplatforms.com" target="_blank">
+        <img src="{% static 'logos/footer/bpa-grayscale.png' %}" />
+      </a>
+
+      <a href="https://nci.org.au" target="_blank">
+        <img src="{% static 'logos/footer/nci-grayscale.png' %}" />
+      </a>
+
+      <a href="https://pawsey.org.au" target="_blank">
+        <img src="{% static 'logos/footer/pawsey-grayscale.png' %}" />
       </a>
 
       <a href="https://www.dese.gov.au/ncris" target="_blank">
-        <img src="{% static 'logos/ncris.svg' %}" />
+        <img src="{% static 'logos/footer/ncris-grayscale.png' %}" />
       </a>
 
-      <a href="https://rcc.uq.edu.au/" target="_blank">
-        <img src="{% static 'logos/uq-2.png' %}" />
+      <a href="https://www.qld.gov.au" target="_blank">
+        <img src="{% static 'logos/footer/qld-gov.png' %}" />
       </a>
     </div>
   </div>
 
+  <hr>
 
-  <p class="text-center">
-    <small>
-      The content of this website is licensed under a Creative Commmons Attribute 3.0 Australian License.
-      Please review the Galaxy Australia
-      <a href="">Terms of Use and Policies.</a>
-    </small>
-  </p>
+  <div class="container links">
+    <div class="row justify-content-center align-items-center">
+      <img
+        src="{% static 'logos/footer/galaxy-black.png' %}"
+        alt="Galaxy logo black">
 
-  <div class="contact-info">
-    <div>
-      <p>
-        <i class="fas fa-envelope"></i>
-        <a href="mailto:help@genome.edu.au">help@genome.edu.au</a>
-      </p>
-    </div>
+      <div class="col-auto">
+        <h6>Site links</h6>
+        <div class="row">
+          <div class="col">
+            <small>
+              <a href="#">Support</a> <br>
+              <a href="#">Feature catalogue</a> <br>
+              <a href="#">Terms and conditions</a>
+            </small>
+          </div>
 
-    <div>
-      <p>
-        <i class="fab fa-github"></i>
-        <a href="https://github.com/usegalaxy-au" target="_blank">usegalaxy-au</a>
-      </p>
-    </div>
+          <div class="col">
+            <small>
+              <a href="#">Privacy and data collection</a> <br>
+              <a href="#">Acceptable use</a> <br>
+              <a href="#">Service labels</a>
+            </small>
+          </div>
+        </div>
+      </div>
 
-    <div>
-      <p>
-        <i class="fab fa-twitter"></i>
-        <a href="https://twitter.com/galaxyaustradiva" target="_blank">@galaxyaustralia</a>
-      </p>
+      <div class="col-sm-4">
+        <h6>Acknowledgements</h6>
+        <p class="tight">
+          <small>
+            We acknowledge and pay respect to the Elders and Traditional Owners
+            of the lands on which our partner organisations stand.
+          </small>
+        </p>
+      </div>
+
+      <div class="col-auto">
+        <h6>Connect</h6>
+        <p>
+          <a href="mailto:help@genome.edu.au">
+            <i class="fas fa-envelope"></i>
+          </a>
+
+          <a href="https://github.com/usegalaxy-au" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+
+          <a href="https://twitter.com/galaxyaustralia" target="_blank">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </p>
+      </div>
     </div>
   </div>
-
 </footer>
