--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -55,16 +55,16 @@
     </div>
   </div>
 
-  <hr>
 
   <div class="container links">
-    <div class="row justify-content-center align-items-center">
+    <hr>
+    <div class="row justify-content-center">
       <img
         src="{% static 'logos/footer/galaxy-black.png' %}"
         alt="Galaxy logo black">
 
       <div class="col-auto">
-        <h6>Site links</h6>
+        <h6>SITE LINKS</h6>
         <div class="row">
           <div class="col">
             <small>
@@ -85,7 +85,7 @@
       </div>
 
       <div class="col-sm-4">
-        <h6>Acknowledgements</h6>
+        <h6>ACKNOWLEDGEMENTS</h6>
         <p class="tight">
           <small>
             We acknowledge and pay respect to the Elders and Traditional Owners
@@ -95,7 +95,7 @@
       </div>
 
       <div class="col-auto">
-        <h6>Connect</h6>
+        <h6>CONNECT</h6>
         <p>
           <a href="mailto:help@genome.edu.au">
             <i class="fas fa-envelope"></i>
