Remove target="_blank" from landing page links

--- a/webapp/home/templates/home/header_landing.html
+++ b/webapp/home/templates/home/header_landing.html
@@ -30,7 +30,7 @@
       $(document).ready( () => {
 
         // Make all links open in new tab
-        $('a').prop('target', '_blank');
+        // $('a').prop('target', '_blank');
 
         // Enable bootstrap tooltips
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
