--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -86,6 +86,16 @@ footer p.tight {
   line-height: 1.15;
 }
 
+/* Iframe */
+nav.embedded a.navbar-brand,
+nav.embedded .login {
+  display: none;
+}
+nav.embedded .navbar-collapse {
+  justify-content: center;
+}
+
+
 /* Layout */
 main {
   max-width: 1000px;
