--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -60,7 +60,7 @@
     <hr>
     <div class="row justify-content-center">
       <img
-        src="{% static 'logos/footer/galaxy-black.png' %}"
+        src="{% static 'logos/footer/galaxy-black.svg' %}"
         alt="Galaxy logo black">
 
       <div class="col-auto">
