Deploy: make gunicorn service template

--- a/deploy/gunicorn.service.tmpl
+++ b/deploy/gunicorn.service.tmpl
@@ -9,7 +9,7 @@ User = ubuntu
 Group = www-data
 RuntimeDirectory=gunicorn
 WorkingDirectory=/srv/sites/webapp
-Environment="PATH=/home/ubuntu/virtualenvs/crustyenv/bin:$PATH"
+Environment="PATH={{ PWD }}/.venv/bin:$PATH"
 ExecStart={{ PWD }}/.venv/bin/gunicorn --pid /run/gunicorn/pid   \
           --bind unix:/run/webapp.sock       \
           -c /srv/sites/webapp/server/gunicorn.py webapp.wsgi
