--- a/deploy/nginx.conf.tmpl
+++ b/deploy/nginx.conf.tmpl
@@ -41,6 +41,7 @@ server {
         proxy_set_header      Host                 $host;
         proxy_set_header      X-Real-IP            $remote_addr;
         proxy_set_header      X-Forwarded-For      $proxy_add_x_forwarded_for;
+        proxy_hide_header     X-Frame-Options;
         proxy_read_timeout    600;  # seconds
         client_max_body_size  1000m;
     }
