Fix landing page grafana links

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -95,26 +95,26 @@
 
   <section id="stats-panel">
     <div>
-      <iframe width="100%" height="200px" src="https://stats.genome.edu.au/d-solo/-D4mtTAik/for_embedding?refresh=10s&amp;orgId=1&amp;panelId=2" frameborder="0" onload=notifyLoaded(1);></iframe>
+      <iframe width="100%" height="200px" src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=10s&panelId=2" frameborder="0" onload=notifyLoaded(1);></iframe>
     </div>
 
     <div class="row justify-content-between">
       <img class="loading" src="{% static 'home/img/spinner.svg' %}" alt="Loading stats">
 
       <div class="col">
-        <iframe src="https://stats.genome.edu.au/d-solo/-D4mtTAik/for_embedding?orgId=1&amp;refresh=1d&amp;panelId=19" width="95%" height="110px" frameborder="0" onload=notifyLoaded(2);></iframe>
+        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=19" width="95%" height="110px" frameborder="0" onload=notifyLoaded(2);></iframe>
       </div>
 
       <div class="col">
-        <iframe src="https://stats.genome.edu.au/d-solo/-D4mtTAik/for_embedding?orgId=1&amp;refresh=1d&amp;panelId=21" width="95%" height="110px" frameborder="0" onload=notifyLoaded(3);></iframe>
+        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=21" width="95%" height="110px" frameborder="0" onload=notifyLoaded(3);></iframe>
       </div>
 
       <div class="col">
-        <iframe src="https://stats.genome.edu.au/d-solo/-D4mtTAik/for_embedding?orgId=1&amp;refresh=1d&amp;panelId=23" width="95%" height="110px" frameborder="0" onload=notifyLoaded(4);></iframe>
+        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=23" width="95%" height="110px" frameborder="0" onload=notifyLoaded(4);></iframe>
       </div>
 
       <div class="col">
-        <iframe src="https://stats.genome.edu.au/d-solo/-D4mtTAik/for_embedding?orgId=1&amp;refresh=1d&amp;panelId=25" width="95%" height="110px" frameborder="0" onload=notifyLoaded(5);></iframe>
+        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=25" width="95%" height="110px" frameborder="0" onload=notifyLoaded(5);></iframe>
       </div>
     </div>
   </section>
