--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -12,7 +12,7 @@
       </a>
 
       <a href="https://www.melbournebioinformatics.org.au" target="_blank">
-        <img src="{% static 'logos/footer/melbbio.png' %}" />
+        <img src="{% static 'logos/footer/melb-bio-short.png' %}" />
       </a>
 
       <a href="https://www.aarnet.edu.au" target="_blank">
