Update about page - move citations to top

--- a/webapp/home/templates/home/about.html
+++ b/webapp/home/templates/home/about.html
@@ -18,11 +18,10 @@
       <a href="https://usegalaxy.org.au">usegalaxy.org.au</a>
     </h3>
 
-    <p>The Galaxy Australia service is jointed maintained by QFAB (link) and Melbourne Bioinformatics (link) with funding from ARDC (managed by BPA) and ABC (links for all). The service allows Australian researchers access to:
+    <p>The Galaxy Australia service is jointed maintained by QFAB (link) and Melbourne Bioinformatics (link) with funding from ARDC (managed by BPA) and ABC (links for all). The service allows Australian researchers <b>free access</b> to:
     </p>
 
     <ul>
-      <li>Free!</li>
       <li>Huge compute and storage resource without any charge</li>
       <li>600 GB for Australian researchers (100 GB for other registered users)</li>
       <li>Over 600 well-documented, maintained bioinformatics and other tools</li>
@@ -30,6 +29,16 @@
     </ul>
 
     <p>Galaxy Australia maintains tools, workflows and reference datasets as requested by the Australian research community, making the platform the ideal place for Australian researchers to perform their analyses. If we do not currently support your specific application or species then we will endeavour to make it available, <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXuarvkzFA5kRqoCfO8uiUGAB0PplfR4yvAfpCPSpdMcehmA/viewform">just ask</a>.
+    </p>
+
+    <hr>
+
+    <h3 id="citing-galaxy-australia">
+      <span class="material-icons py-1">school</span>
+      Citing Galaxy Australia.
+    </h3>
+
+    <p>If your use of Galaxy Australia leads to a publication we are always happy to hear about it and would be happy to promote your work through the service. Email your success stories to the Service Manager (Dr Gareth Price, <a href="mailto://g.price@qcif.edu.au">g.price@qcif.edu.au</a>).
     </p>
 
     <hr>
@@ -79,16 +88,6 @@
     </p>
 
     <p>4 TB of reference data are available on <a href="https://usegalaxy.org.au">https://usegalaxy.org.au</a> providing access to hundreds of reference genomes.
-    </p>
-
-    <hr>
-
-    <h3 id="citing-galaxy-australia">
-      <span class="material-icons py-1">school</span>
-      Citing Galaxy Australia.
-    </h3>
-
-    <p>If your use of Galaxy Australia leads to a publication we are always happy to hear about it and would be happy to promote your work through the service. Email your success stories to the Service Manager (Dr Gareth Price, <a href="mailto://g.price@qfab.org">g.price@qfab.org</a>).
     </p>
 
   </div>
