Placeholder for about main page

--- a/webapp/home/templates/home/about.html
+++ b/webapp/home/templates/home/about.html
@@ -11,93 +11,34 @@
 
 <main>
   <div class="container">
-    <h1> About </h1>
 
-    <h3 id="usegalaxyau">
-      <span class="material-icons py-1">home</span>
-      <a href="https://usegalaxy.org.au">usegalaxy.org.au</a>
-    </h3>
+    <!-- Nav with butttons -->
 
-    <p>The Galaxy Australia service is jointed maintained by QFAB (link) and Melbourne Bioinformatics (link) with funding from ARDC (managed by BPA) and ABC (links for all). The service allows Australian researchers <b>free access</b> to:
-    </p>
+    <!-- Sections with includes -->
 
-    <ul>
-      <li>Huge compute and storage resource without any charge</li>
-      <li>600 GB for Australian researchers (100 GB for other registered users)</li>
-      <li>Over 600 well-documented, maintained bioinformatics and other tools</li>
-      <li>No programming experience required</li>
-    </ul>
-
-    <p>Galaxy Australia maintains tools, workflows and reference datasets as requested by the Australian research community, making the platform the ideal place for Australian researchers to perform their analyses. If we do not currently support your specific application or species then we will endeavour to make it available, <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXuarvkzFA5kRqoCfO8uiUGAB0PplfR4yvAfpCPSpdMcehmA/viewform">just ask</a>.
-    </p>
-
-    <hr>
-
-    <h3 id="citing-galaxy-australia">
-      <span class="material-icons py-1">school</span>
-      Citing Galaxy Australia.
-    </h3>
-
-    <p>If your use of Galaxy Australia leads to a publication we are always happy to hear about it and would be happy to promote your work through the service. Email your success stories to the Service Manager (Dr Gareth Price, <a href="mailto://g.price@qcif.edu.au">g.price@qcif.edu.au</a>).
-    </p>
-
-    <hr>
-
-    <h3 id="usegalaxy">
-      <span class="material-icons py-1">language</span>
-      UseGalaxy.*
-    </h3>
-
-    <p><strong>Galaxy Australia</strong> is one of the large Galaxy servers that make up the <strong>usegalaxy.</strong>* initiative. Along with <strong>Galaxy Europe</strong> <a href="https://usegalaxy.eu">usegalaxy.eu</a> and <strong>Galaxy Main</strong> in the USA <a href="https://usegalaxy.org">usegalaxy.org</a>, the <strong>usegalaxy.</strong>* servers aim to provide a global publicly available bioinformatics resource, present a similar look and feel, similar installed tool sets and reference data and indices.
-    </p>
-
-    <p>We do this via a network of globally distributed reference servers using the CernVM-FS and a few public git repositories. For more information on usegalaxy.* see the <a href="https://galaxyproject.org/usegalaxy/">Galaxy Project Community Hub</a>
-    </p>
-
-    <hr>
-
-    <h3 id="visualisation-and-data-interpretation">
-      <span class="material-icons py-1">insights</span>
-      Visualisation &amp; Data Interpretation
-    </h3>
-
-    <p>Publication-ready visualisations can be instantly generated inside Galaxy. A variety of chart options (bar diagram, line charts, box plots) are available as default on any dataset capable of being graphed. Complex visualisation such as heatmaps, Venn diagrams, Krona plots can be made within Galaxy.
-    </p>
-
-    <p>To explore -omics data, interactive visualisations are available:</p>
-
-    <ul>
-      <li>Integrated Genome Browser: Trackster</li>
-      <li>JBrowse, IGV</li>
-    </ul>
-
-    <hr>
-
-    <h3 id="reproducibility-and-transparency">
-      <span class="material-icons py-1">share</span>
-      Reproducibility &amp; Transparency
-    </h3>
-
-    <p>The Galaxy platform is built on a foundation of reproductivity and transparency. All manipulations of your data, from upload through to results and export are captured and easily documented for your long-term records. Citation lists associated with tools used is a one click activity.
-    </p>
-
-    <p>Galaxy provides also a <strong>powerful workflow system</strong>. Workflows can be created by extraction of tools used from histories or built from scratch on an easy to use drag-and-drop canvas. Workflows are downloadable and sharable with everyone and contain all the necessary information to run the workflow, even as tools update (you get a time-locked workflow if tool versioning is a concern).
-    </p>
-
-    <p>The thousands of tools are available with fixed versions and are managed by <a href="https://bioconda.github.io/">Bioconda</a> and <a href="https://biocontainers.pro/">BioContainers</a>.
-    </p>
-
-    <p>4 TB of reference data are available on <a href="https://usegalaxy.org.au">https://usegalaxy.org.au</a> providing access to hundreds of reference genomes.
-    </p>
-
-  </div>
 </main>
 {% endblock %}
 
 
 {% block script %}
+
+<script type="text/javascript">
+
+  // window load scrolltop 1ms timeout
+
+  // selectPage()
+
+  // scrollToId()
+
+</script>
+
 {% endblock %}
 
 
 {% block onload %}
+
+// if window hash: scrollToId
+
+// anchor.click(scrollToId)
+
 {% endblock %}
