About page section navigation logic

--- a/webapp/home/static/home/css/about.css
+++ b/webapp/home/static/home/css/about.css
@@ -45,10 +45,10 @@ main {
   color: #999;
   background: rgba(50,50,50,0.1);
 }
-.page {
+section {
   display: none;
 }
-.page.show {
+section.show {
   display: block;
 }
 .textbox {
