--- a/webapp/home/templates/home/snippets/about/terms-of-service.html
+++ b/webapp/home/templates/home/snippets/about/terms-of-service.html
@@ -10,7 +10,7 @@
     Australian BioCommons
   </a>
   via its
-  <a href="#TODO">
+  <a href="#operational-partners">
     Operational Partners
   </a>
   as part of their collective mission to provide access to the digital techniques, data, and tools used by bioscience researchers.
