Add captcha to web forms

--- a/webapp/home/static/home/css/requests.css
+++ b/webapp/home/static/home/css/requests.css
@@ -33,3 +33,7 @@ span.material-icons {
 .form-check-label {
   margin-left: 1rem;
 }
+.g-recaptcha {
+  display: flex;
+  justify-content: center;
+}
