--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <main class="container">
-  <h1> Galaxy Australia User Requests </h1>
+  <h1> Galaxy Australia Support </h1>
 
   <div class="request-buttons">
     <div class="col">
