--- a/webapp/home/templates/home/requests/tool.html
+++ b/webapp/home/templates/home/requests/tool.html
@@ -240,7 +240,13 @@
       </div>
       <!-- End dataset specific -->
 
+
       <div class="text-center">
+        <div class="mb-10">
+          {{ form.captcha }}
+          {{ form.captcha.errors }}
+        </div>
+
         <button class="ga-btn" type="submit">Submit</button>
       </div>
 
